# rust_colony

./: .gitignore  Cargo.toml  README.md  index.html
public/: style.css
public/fonts/: ace_futurism.kttf  monorita.kttf
public/maps/: desert.tmx  jungle.tmx  map.tmx
src/: lib.rs  main(forfont)  main.rs(for_font)
src/components/: animation_timer.rs  clicked_tile.rs  menu.rs  mod.rs  soldier.rs  ui_button.rs  ui_hud.rs  ui_list.rs  ui_list_line.rs  ui_main_menu.rs  ui_menu.rs  ui_newgame.rs  ui_select.rs  wall.rs
src/helpers/: tiled.rs
src/plugins/: map_plugin.rs  mod.rs  soldier_plugin.rs  tiled_plugin.rs  ui_plugin.rs
src/resources/: cursor_pos.rs  cursor_state.rs  game_state.rs  mod.rs  player_state.rs  soldiers.rs  soldiers_state.rs  tile_clicked.rs  tiles_pos.rs
src/states/: game_state.rs
src/systems/: button_system.rs  camera_movement.rs  collision.rs  map_spawn.rs  mod.rs  mouse_click.rs  set_tiles_pos.rs  soldier_animation.rs  soldier_direction.rs  soldier_move.rs  soldier_pathfind.rs  soldier_spawn.rs  soldier_sprite.rs  soldier_sys.rs  spawn_soliders.rs  tile_clicked.rs  tile_clicked_animation.rs  tile_clicked_spawn.rs  ui_button.rs  ui_hud.rs  ui_list.rs  ui_list_line.rs  ui_main_menu.rs  ui_menu.rs  ui_new_game.rs  ui_select.rs  ui_spawn.rs  update_cursor_pos.rs
src/utils/: constant.rs  mod.rs  pos_util.rs  position.rs  sprite.rs
