[package]
version = "0.1.0"
name = "rust_colony"
license = "MIT"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.9.1"
wasm-bindgen = "0.2.84"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
