[package]
version = "0.1.0"
name = "rust_colony"
license = "MIT"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#bevy = "0.9.1"
bevy ={ version = "0.9.1", default-features = true, features = [
   "bevy_core_pipeline",
   "bevy_render",
   "bevy_asset",
   "bevy_sprite",
   "png",
   "bevy_text",
   "bevy_sprite",
] }
wasm-bindgen = "0.2.84"
bevy_ecs_tilemap = { version = "0.9.0", features = ["atlas", "render"] }
anyhow = "1.0"
tiled = { version = "0.10.2", default-features = false }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
