[package]
version = "0.1.0"
name = "rust_colony"
license = "MIT"
readme = "./README.md"
edition = "2021"
description = "A Dark Colony Web Clone"
repository = "https://github.com/TuntematonSotilas/rust_colony"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.10.1", default-features = true, features = [
   "bevy_core_pipeline",
   "bevy_render",
   "bevy_asset",
   "bevy_sprite",
   "png",
] }
wasm-bindgen = "0.2.84"
bevy_ecs_tilemap = { version = "0.10.0", features = ["atlas", "render"] }
tiled = { version = "0.10.2", default-features = false }
web-sys = { version = "0.3.61", features = ["Window", "Document", "Element"] }
pathfinding = "4.2.1"
kayak_ui = "0.4.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
